# 20GamesChallenge

./: .gitignore  README.md
1Pong/: CMakeLists.txt  README.md  ]  a.out  ball.cpp  build.bash  main.cpp
1Pong/.cache/clangd/index/: ball.cpp.33E402C50A684352.idx  ball.h.CF61315075FBBC66.idx  main.cpp.7EEED0D9B47D6CC8.idx  player.cpp.10641BA96FE8CA5E.idx  player.h.E327A17A81AA6CEB.idx
1Pong/HeaderFiles/: ball.h  player.h
1Pong/Sources/: ball.cpp  main.cpp  player.cpp
2JetpackJoyride/: CMakeLists.txt  README.md  a.out  build.bash  coin.cpp  main.cpp  player.cpp  room.cpp
2JetpackJoyride/.cache/clangd/index/: coin.cpp.87CC4A1E74BF833C.idx  coin.h.D04FCA94B9D1B9E4.idx  main.cpp.C5F7861EE4E03960.idx  player.cpp.A6766C09872A9149.idx  player.h.470A899B1A41EDA7.idx  room.cpp.3036D993F61E01A2.idx  room.h.1046D9135E9E080B.idx
2JetpackJoyride/HeaderFiles/: coin.h  entity.h  gamelogic.h  laser.h  player.h  room.h  sound.h  textures.h
2JetpackJoyride/Sources/: coin.cpp  entity.cpp  gamelogic.cpp  laser.cpp  main.cpp  player.cpp  room.cpp  sound.cpp  textures.cpp
